[package]
name = "ml-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
linfa = "0.6.1"
linfa-datasets = { version = "0.6.1", features = ["iris"] }
linfa-trees = "0.6.1"
ndarray = "0.15.6"
